--- a/SenWGames/SenWGames.Core/SenWGames.Core.csproj
+++ b/SenWGames/SenWGames.Core/SenWGames.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Domain\Entities\" />
+    <Folder Include="Domain\SignalR\" />
+  </ItemGroup>
+
 </Project>
