SignalR WIP project settings

--- a/SenWGames/SenWGames.Web/SenWGames.Web.csproj
+++ b/SenWGames/SenWGames.Web/SenWGames.Web.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Hubs\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
