Added get endpoint. Fixed migrations thing. Database is created.

--- a/SenWGames/SenWGames.Web/appsettings.json
+++ b/SenWGames/SenWGames.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnectionString": "Server=SERVER;Database=DATABASE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnectionString": "Server=(localdb)\\mssqllocaldb;Database=SenWDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
