--- a/SenWGames/SenWGames.Web/appsettings.json
+++ b/SenWGames/SenWGames.Web/appsettings.json
@@ -1,7 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnectionString": "Server=(localdb)\\mssqllocaldb;Database=SenWDbContext;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+  "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=SenWDbContext;Trusted_Connection=True;MultipleActiveResultSets=true",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
