--- a/SenWGames/SenWGames.Web/SenWGames.Web.csproj
+++ b/SenWGames/SenWGames.Web/SenWGames.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,10 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\SenWGames.Core\SenWGames.Core.csproj" />
     <ProjectReference Include="..\SenWGames.Infrastructure\SenWGames.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
